--- a/BaiTapLon-HCJ/home.html
+++ b/BaiTapLon-HCJ/home.html
@@ -96,7 +96,7 @@
                         <a href=""><img src="img/circle-heart.png" alt=""></a>
                     </div>
                     <div class="col-md-4 col-sm-5 logo-box">
-                        <a href=""><img src="img/logo.png" class="logo" alt=""></a>
+                        <a href="home.html"><img src="img/logo.png" class="logo" alt=""></a>
                     </div>
                     <div class="col-md-4 col-sm-4 icon">
                         <div class="dropdown cart-bg-achoo">
@@ -274,21 +274,21 @@
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="collection-item">
-                                <img src="img/collection.png" alt="">
+                                <img src="img/fresh-fruit.png" alt="">
                                 <p>FRESH <span>FRUITS</span></p>
                                 <a href="">VIEW COLLECTIONS</a>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="collection-item">
-                                <img src="img/collection.png" alt="">
+                                <img src="img/fresh-fruit.png" alt="">
                                 <p>FRESH <span>FRUITS</span></p>
                                 <a href="">VIEW COLLECTIONS</a>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="collection-item">
-                                <img src="img/collection.png" alt="">
+                                <img src="img/fresh-fruit.png" alt="">
                                 <p>FRESH <span>FRUITS</span></p>
                                 <a href="">VIEW COLLECTIONS</a>
                             </div>
@@ -310,7 +310,7 @@
                                 <img src="img/Sale.png" alt="">
                             </div>
                             <div class="slide-item-sm">
-                                <img src="img/arrival-item.png" class="arr-img" alt="">
+                                <img src="img/Jessica-Simpson-Fruit.png" class="arr-img" alt="">
                                 <p class="arritem-title">Jessica Simpson Fruit's</p>
                                 <p class="arritem-price">$19.00<del>$12.00</del></p>
                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -329,7 +329,7 @@
                         </div>
                         <div class="slide-item">
                            <div class="slide-item-sm">
-                                <img src="img/arrival-item.png" alt="">
+                                <img src="img/Jessica-Simpson-Fruit.png" alt="">
                                 <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
                                 <p class="arritem-price">$32.00<del>$12.00</del></p>
                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -351,7 +351,7 @@
                                 <img src="img/new.png" alt="">
                             </div>
                             <div class="slide-item-sm">
-                                <img src="img/arrival-item.png" alt="">
+                                <img src="img/Jessica-Simpson-Fruit.png" alt="">
                                 <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
                                 <p class="arritem-price">$32.00<del>$12.00</del></p>
                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -370,7 +370,7 @@
                         </div>
                         <div class="slide-item">
                             <div class="slide-item-sm">
-                                <img src="img/arrival-item.png" alt="">
+                                <img src="img/Jessica-Simpson-Fruit.png" alt="">
                                 <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
                                 <p class="arritem-price">$32.00<del>$12.00</del></p>
                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -389,7 +389,7 @@
                         </div>
                         <div class="slide-item">
                             <div class="slide-item-sm">
-                                <img src="img/arrival-item.png" alt="">
+                                <img src="img/Jessica-Simpson-Fruit.png" alt="">
                                 <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
                                 <p class="arritem-price">$32.00<del>$12.00</del></p>
                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -408,7 +408,7 @@
                         </div>
                         <div class="slide-item">
                             <div class="slide-item-sm">
-                                <img src="img/arrival-item.png" alt="">
+                                <img src="img/Jessica-Simpson-Fruit.png" alt="">
                                 <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
                                 <p class="arritem-price">$32.00<del>$12.00</del></p>
                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -427,7 +427,7 @@
                         </div>
                         <div class="slide-item">
                             <div class="slide-item-sm">
-                                <img src="img/arrival-item.png" alt="">
+                                <img src="img/Jessica-Simpson-Fruit.png" alt="">
                                 <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
                                 <p class="arritem-price">$32.00<del>$12.00</del></p>
                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -446,7 +446,7 @@
                         </div>
                         <div class="slide-item">
                             <div class="slide-item-sm">
-                                <img src="img/arrival-item.png" alt="">
+                                <img src="img/Jessica-Simpson-Fruit.png" alt="">
                                 <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
                                 <p class="arritem-price">$32.00<del>$12.00</del></p>
                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -486,7 +486,7 @@
                         <div class="col-xl-3">
                             <div class="row deal-lr">
                                 <div class="col-sm-5">
-                                    <img src="img/item-deal.png" class="deal-item-sm" alt="">
+                                    <img src="img/Jessica-Simpson-Fruit.png" class="deal-item-sm" alt="">
                                 </div>
                                 <div class="col-sm-7 deal-item-sm7">
                                     <p class="deal-item-title">Jessica Simpson Fruit's</p>
@@ -502,7 +502,7 @@
                             <hr>
                             <div class="row deal-lr">
                                 <div class="col-sm-5">
-                                    <img src="img/item-deal.png" class="deal-item-sm" alt="">
+                                    <img src="img/Jessica-Simpson-Fruit.png" class="deal-item-sm" alt="">
                                 </div>
                                 <div class="col-sm-7 deal-item-sm7">
                                     <p class="deal-item-title">Jessica Simpson Fruit's</p>
@@ -518,7 +518,7 @@
                             <hr>
                             <div class="row deal-lr">
                                 <div class="col-sm-5">
-                                    <img src="img/item-deal.png" class="deal-item-sm" alt="">
+                                    <img src="img/Jessica-Simpson-Fruit.png" class="deal-item-sm" alt="">
                                 </div>
                                 <div class="col-sm-7 deal-item-sm7">
                                     <p class="deal-item-title">Jessica Simpson Fruit's</p>
@@ -535,7 +535,7 @@
                         <div class="col-xl-4 deal-center">
                             <img src="img/deal-circle.png" alt="">
                             <div class="deal-center-item">
-                                <img src="img/item-deal.png" class="center-deal-item" alt="">
+                                <img src="img/fruit-deal.png" class="center-deal-item" alt="">
                                 <p class="deal-item-title">Kensie Fruit's Wool Cocoon CoatKensie Fruit</p>
                                 <div class="rate">
                                     <img src="img/star.png" alt="">
@@ -551,7 +551,7 @@
                         <div class="col-xl-3 deal-right">
                             <div class="row deal-lr">
                                 <div class="col-sm-5">
-                                    <img src="img/item-deal.png" class="deal-item-sm" alt="">
+                                    <img src="img/Jessica-Simpson-Fruit.png" class="deal-item-sm" alt="">
                                 </div>
                                 <div class="col-sm-7">
                                     <p class="deal-item-title">Jessica Simpson Fruit's</p>
@@ -567,7 +567,7 @@
                             <hr>
                             <div class="row deal-lr">
                                 <div class="col-sm-5">
-                                    <img src="img/item-deal.png" class="deal-item-sm" alt="">
+                                    <img src="img/Jessica-Simpson-Fruit.png" class="deal-item-sm" alt="">
                                 </div>
                                 <div class="col-sm-7">
                                     <p class="deal-item-title">Jessica Simpson Fruit's</p>
@@ -583,7 +583,7 @@
                             <hr>
                             <div class="row deal-lr">
                                 <div class="col-sm-5">
-                                    <img src="img/item-deal.png" class="deal-item-sm" alt="">
+                                    <img src="img/Jessica-Simpson-Fruit.png" class="deal-item-sm" alt="">
                                 </div>
                                 <div class="col-sm-7">
                                     <p class="deal-item-title">Jessica Simpson Fruit's</p>
