--- a/BaiTapLon-HCJ/product-detail.html
+++ b/BaiTapLon-HCJ/product-detail.html
@@ -73,7 +73,7 @@
                         <a href=""><img src="img/circle-heart.png" alt=""></a>
                     </div>
                     <div class="col-md-4 col-sm-5 logo-box">
-                        <a href=""><img src="img/logo.png" class="logo" alt=""></a>
+                        <a href="home.html"><img src="img/logo.png" class="logo" alt=""></a>
                     </div>
                     <div class="col-md-4 col-sm-4 icon">
                         <div class="dropdown cart-bg-hh213">
@@ -227,23 +227,23 @@
                 <div class="row" style="margin-top: 100px">
                     <div class="col-md-6">
                         <div class="product-detail-img">
-                            <img src="img/product-detail-img.png" width="100%" alt="">
+                            <img src="img/Jessica-Simpson-Fruit-Details.png" width="100%" alt="">
                         </div>
                         <div class="product-description-img">
                             <div class="desciption-item">
-                                <img src="img/product-desciption-img.png" alt="">
+                                <img src="img/chanh-details.png" alt="">
                             </div>
                             <div class="desciption-item">
-                                <img src="img/product-desciption-img.png" alt="">
+                                <img src="img/cam-details.png" alt="">
                             </div>
                             <div class="desciption-item">
-                                <img src="img/product-desciption-img.png" alt="">
+                                <img src="img/dau-details.png" alt="">
                             </div>
                             <div class="desciption-item">
-                                <img src="img/product-desciption-img.png" alt="">
+                                <img src="img/cam-details.png" alt="">
                             </div>
                             <div class="desciption-item">
-                                <img src="img/product-desciption-img.png" alt="">
+                                <img src="img/dau-details.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -335,7 +335,7 @@
                     <div class="related-slider">
                         <div class="slide-item">
                            <div class="slide-item-sm">
-                                <img src="img/arrival-item.png" alt="">
+                                <img src="img/Jessica-Simpson-Fruit.png" alt="">
                                 <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
                                 <p class="arritem-price">$32.00<del>$12.00</del></p>
                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -354,7 +354,7 @@
                         </div>
                         <div class="slide-item">
                            <div class="slide-item-sm">
-                                <img src="img/arrival-item.png" alt="">
+                                <img src="img/Jessica-Simpson-Fruit.png" alt="">
                                 <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
                                 <p class="arritem-price">$32.00<del>$12.00</del></p>
                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -373,7 +373,7 @@
                         </div>
                         <div class="slide-item">
                            <div class="slide-item-sm">
-                                <img src="img/arrival-item.png" alt="">
+                                <img src="img/Jessica-Simpson-Fruit.png" alt="">
                                 <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
                                 <p class="arritem-price">$32.00<del>$12.00</del></p>
                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -392,7 +392,7 @@
                         </div>
                         <div class="slide-item">
                            <div class="slide-item-sm">
-                                <img src="img/arrival-item.png" alt="">
+                                <img src="img/Jessica-Simpson-Fruit.png" alt="">
                                 <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
                                 <p class="arritem-price">$32.00<del>$12.00</del></p>
                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -411,7 +411,7 @@
                         </div>
                         <div class="slide-item">
                            <div class="slide-item-sm">
-                                <img src="img/arrival-item.png" alt="">
+                                <img src="img/Jessica-Simpson-Fruit.png" alt="">
                                 <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
                                 <p class="arritem-price">$32.00<del>$12.00</del></p>
                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -430,7 +430,7 @@
                         </div>
                         <div class="slide-item">
                            <div class="slide-item-sm">
-                                <img src="img/arrival-item.png" alt="">
+                                <img src="img/Jessica-Simpson-Fruit.png" alt="">
                                 <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
                                 <p class="arritem-price">$32.00<del>$12.00</del></p>
                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
