--- a/BaiTapLon-HCJ/product.html
+++ b/BaiTapLon-HCJ/product.html
@@ -73,7 +73,7 @@
                         <a href=""><img src="img/circle-heart.png" alt=""></a>
                     </div>
                     <div class="col-md-4 col-sm-5 logo-box">
-                        <a href=""><img src="img/logo.png" class="logo" alt=""></a>
+                        <a href="home.html"><img src="img/logo.png" class="logo" alt=""></a>
                     </div>
                     <div class="col-md-4 col-sm-4 icon">
                         <div class="dropdown cart-bg-hh213">
@@ -219,7 +219,7 @@
                 <div class="basic-info">
                     <div class="row">
                         <div class="col-sm-12 contact-title">
-                            <span><a href="">Home | </a>Vegetables</span>
+                            <span><a href="home.html">Home | </a>Vegetables</span>
                             <p>Vegetables</p>
                         </div>
                     </div>
@@ -365,7 +365,7 @@
                             <p>
                                 <div class="row" style="margin-top: 35px;">
                                     <div class="col-sm-6">
-                                        <img src="img/product-sidebar.png" alt="">
+                                        <img src="img/cam-details.png" alt="">
                                     </div>
                                     <div class="col-sm-6">
                                         <p style="color: #5a4a3b; font-size: 13px;margin: 0;">Raddish Chits</p>
@@ -379,7 +379,7 @@
                                 </div>
                                 <div class="row" style="margin-top: 35px;">
                                     <div class="col-sm-6">
-                                        <img src="img/product-sidebar.png" alt="">
+                                        <img src="img/chanh-details.png" alt="">
                                     </div>
                                     <div class="col-sm-6">
                                         <p style="color: #5a4a3b; font-size: 13px;margin: 0;">Raddish Chits</p>
@@ -393,7 +393,7 @@
                                 </div>
                                 <div class="row" style="margin-top: 35px;">
                                     <div class="col-sm-6">
-                                        <img src="img/product-sidebar.png" alt="">
+                                        <img src="img/dau-details.png" alt="">
                                     </div>
                                     <div class="col-sm-6">
                                         <p style="color: #5a4a3b; font-size: 13px;margin: 0;">Raddish Chits</p>
@@ -463,7 +463,7 @@
                                     <div class="product-list">
                                         <div class="slide-item">
                                             <div class="slide-item-sm">
-                                                <img src="img/arrival-item.png" class="arr-img" alt="">
+                                                <img src="img/Jessica-Simpson-Fruit.png" class="arr-img" alt="">
                                                 <p class="arritem-title">Jessica Simpson Fruit's</p>
                                                 <p class="arritem-price">$19.00<del>$12.00</del></p>
                                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -484,7 +484,7 @@
                                     <div class="product-list">
                                         <div class="slide-item">
                                             <div class="slide-item-sm">
-                                                <img src="img/arrival-item.png" class="arr-img" alt="">
+                                                <img src="img/Jessica-Simpson-Fruit.png" class="arr-img" alt="">
                                                 <p class="arritem-title">Jessica Simpson Fruit's</p>
                                                 <p class="arritem-price">$19.00<del>$12.00</del></p>
                                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -505,7 +505,7 @@
                                     <div class="product-list">
                                         <div class="slide-item">
                                             <div class="slide-item-sm">
-                                                <img src="img/arrival-item.png" class="arr-img" alt="">
+                                                <img src="img/Jessica-Simpson-Fruit.png" class="arr-img" alt="">
                                                 <p class="arritem-title">Jessica Simpson Fruit's</p>
                                                 <p class="arritem-price">$19.00<del>$12.00</del></p>
                                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -526,7 +526,7 @@
                                     <div class="product-list">
                                         <div class="slide-item">
                                             <div class="slide-item-sm">
-                                                <img src="img/arrival-item.png" class="arr-img" alt="">
+                                                <img src="img/Jessica-Simpson-Fruit.png" class="arr-img" alt="">
                                                 <p class="arritem-title">Jessica Simpson Fruit's</p>
                                                 <p class="arritem-price">$19.00<del>$12.00</del></p>
                                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -552,7 +552,7 @@
                                                 <img src="img/Sale.png" alt="">
                                             </div>
                                             <div class="slide-item-sm">
-                                                <img src="img/arrival-item.png" class="arr-img" alt="">
+                                                <img src="img/Jessica-Simpson-Fruit.png" class="arr-img" alt="">
                                                 <p class="arritem-title">Jessica Simpson Fruit's</p>
                                                 <p class="arritem-price">$19.00<del>$12.00</del></p>
                                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -573,7 +573,7 @@
                                     <div class="product-list">
                                         <div class="slide-item">
                                             <div class="slide-item-sm">
-                                                <img src="img/arrival-item.png" class="arr-img" alt="">
+                                                <img src="img/Jessica-Simpson-Fruit.png" class="arr-img" alt="">
                                                 <p class="arritem-title">Jessica Simpson Fruit's</p>
                                                 <p class="arritem-price">$19.00<del>$12.00</del></p>
                                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -594,7 +594,7 @@
                                     <div class="product-list">
                                         <div class="slide-item">
                                             <div class="slide-item-sm">
-                                                <img src="img/arrival-item.png" class="arr-img" alt="">
+                                                <img src="img/Jessica-Simpson-Fruit.png" class="arr-img" alt="">
                                                 <p class="arritem-title">Jessica Simpson Fruit's</p>
                                                 <p class="arritem-price">$19.00<del>$12.00</del></p>
                                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -615,7 +615,7 @@
                                     <div class="product-list">
                                         <div class="slide-item">
                                             <div class="slide-item-sm">
-                                                <img src="img/arrival-item.png" class="arr-img" alt="">
+                                                <img src="img/Jessica-Simpson-Fruit.png" class="arr-img" alt="">
                                                 <p class="arritem-title">Jessica Simpson Fruit's</p>
                                                 <p class="arritem-price">$19.00<del>$12.00</del></p>
                                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -641,7 +641,7 @@
                                                 <img src="img/new.png" alt="">
                                             </div>
                                             <div class="slide-item-sm">
-                                                <img src="img/arrival-item.png" class="arr-img" alt="">
+                                                <img src="img/Jessica-Simpson-Fruit.png" class="arr-img" alt="">
                                                 <p class="arritem-title">Jessica Simpson Fruit's</p>
                                                 <p class="arritem-price">$19.00<del>$12.00</del></p>
                                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -662,7 +662,7 @@
                                     <div class="product-list">
                                         <div class="slide-item">
                                             <div class="slide-item-sm">
-                                                <img src="img/arrival-item.png" class="arr-img" alt="">
+                                                <img src="img/Jessica-Simpson-Fruit.png" class="arr-img" alt="">
                                                 <p class="arritem-title">Jessica Simpson Fruit's</p>
                                                 <p class="arritem-price">$19.00<del>$12.00</del></p>
                                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -683,7 +683,7 @@
                                     <div class="product-list">
                                         <div class="slide-item">
                                             <div class="slide-item-sm">
-                                                <img src="img/arrival-item.png" class="arr-img" alt="">
+                                                <img src="img/Jessica-Simpson-Fruit.png" class="arr-img" alt="">
                                                 <p class="arritem-title">Jessica Simpson Fruit's</p>
                                                 <p class="arritem-price">$19.00<del>$12.00</del></p>
                                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
@@ -704,7 +704,7 @@
                                     <div class="product-list">
                                         <div class="slide-item">
                                             <div class="slide-item-sm">
-                                                <img src="img/arrival-item.png" class="arr-img" alt="">
+                                                <img src="img/Jessica-Simpson-Fruit.png" class="arr-img" alt="">
                                                 <p class="arritem-title">Jessica Simpson Fruit's</p>
                                                 <p class="arritem-price">$19.00<del>$12.00</del></p>
                                                 <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
