--- a/BaiTapLon-HCJ/about.html
+++ b/BaiTapLon-HCJ/about.html
@@ -72,7 +72,7 @@
                         <a href=""><img src="img/circle-heart.png" alt=""></a>
                     </div>
                     <div class="col-md-4 col-sm-5 logo-box">
-                        <a href=""><img src="img/logo.png" class="logo" alt=""></a>
+                        <a href="home.html"><img src="img/logo.png" class="logo" alt=""></a>
                     </div>
                     <div class="col-md-4 col-sm-4 icon">
                         <div class="dropdown cart-bg-hh213">
