--- a/BaiTapLon-HCJ/my-account.html
+++ b/BaiTapLon-HCJ/my-account.html
@@ -71,7 +71,7 @@
                     <a href=""><img src="img/circle-heart.png" alt=""></a>
                 </div>
                 <div class="col-md-4 col-sm-5 logo-box">
-                    <a href=""><img src="img/logo.png" class="logo" alt=""></a>
+                    <a href="home.html"><img src="img/logo.png" class="logo" alt=""></a>
                 </div>
                 <div class="col-md-4 col-sm-4 icon">
                     <a href=""><img src="img/circle-bag.png" align="right" alt=""></a>
