--- a/BaiTapLon-HCJ/about.html
+++ b/BaiTapLon-HCJ/about.html
@@ -225,7 +225,7 @@
                     <div class="row" style="margin-top: 100px;margin-bottom: 100px;">
                         <div class="col-md-6">
                             <div class="about-img">
-                                <img src="img/about-square.png" id="square" alt="">
+                                <img src="img/about-fruit.png" id="square" alt="">
                                 <img src="img/about-rectangle.png" id="rectangle" alt="">
                             </div>
                         </div>
