--- a/BaiTapLon-HCJ/about.html
+++ b/BaiTapLon-HCJ/about.html
@@ -32,13 +32,13 @@
                                 <i class="far fa-user"></i> My Account
                             </a>
                             <div class="dropdown-menu myaccount-form-hh213">
-                                <a class="dropdown-item myaccount-bullet-hh213 w-100" href="#">MY ACCOUNT</a>
+                                <a class="dropdown-item myaccount-bullet-hh213 w-100" href="my-account.html">MY ACCOUNT</a>
                                 <div class="myaccount-line-hh213 border-info"></div>
-                                <a class="dropdown-item myaccount-bullet-hh213 w-100" href="#">WISHLIST</a>
+                                <a class="dropdown-item myaccount-bullet-hh213 w-100" href="Wish-list.html">WISHLIST</a>
                                 <div class="myaccount-line-hh213 border-info"></div>
-                                <a class="dropdown-item myaccount-bullet-hh213 w-100" href="#">CHECKOUT</a>
+                                <a class="dropdown-item myaccount-bullet-hh213 w-100" href="checkout.html">CHECKOUT</a>
                                 <div class="myaccount-line-hh213 border-info"></div>
-                                <a class="dropdown-item myaccount-bullet-hh213 w-100" href="#">BLOG</a>
+                                <a class="dropdown-item myaccount-bullet-hh213 w-100" href="blog.html">BLOG</a>
                                 <div class="myaccount-line-hh213 border-info"></div>
                                 <a class="dropdown-item myaccount-bullet-hh213 w-100" href="#">LOGIN</a>
                                 <div class="myaccount-line-hh213 border-info"></div>
